Added Block comments for javadoc.
Block commented all the User and Security classes.